k8s/blue-green/04-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-green
  namespace: default
  labels:
    app: webapp
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
      version: green
  template:
    metadata:
      labels:
        app: webapp
        version: green
    spec:
      containers:
        - name: webapp
          image: nginx:1.25
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html
      volumes:
        - name: html
          configMap:
            name: green-page
